[gd_scene load_steps=2 format=3 uid="uid://b82i43crgrl08"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/DomainPanel/DomainPanelManager.gd" id="1_k02oh"]

[node name="DomainPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = -1
anchor_left = 0.766
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 299.52
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_k02oh")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Loadable Domains"
horizontal_alignment = 1

[node name="Searchbar" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search..."

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="DomainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="Searchbar" to="." method="_on_searchbar_text_changed"]
